--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,3 +193,9 @@ button, p {
 .additional-extra {
   display: flex;
 }  
+
+/* AddedExtras */
+.extra {
+  display: flex;
+  align-items: center;
+}
