--- a/client/src/App.css
+++ b/client/src/App.css
@@ -157,13 +157,29 @@ p {
   line-height: 1.4;
 }
 
-/* Cart */
+/* Nav */
+.nav {
+  margin-bottom: 2%;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  padding-right: 4%;
+  font-size: 1.6em;
+}
+.nav-link:hover {
+  color: teal;
+}
+
+/* Menu, Cart */
 .item {
   background-color:honeydew;
   border-radius: 6px;
   display: flex;
   justify-content: center;
   padding: 2%;
+  margin-bottom: 2%;
 }
 
 .item-img {
@@ -198,7 +214,11 @@ p {
   border-radius: 6px;
 }
 
-/* Total */
+.item-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .total {
   display: flex;
   justify-content: flex-end;
