--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,8 +193,8 @@ p {
 
 .item-img {
   border: 1px solid #ddd;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 100px;
 }
 
@@ -214,23 +214,29 @@ p {
 }
 
 .added-extra {
-  padding-top: 2%;
-}
-
-.additional-extras {
-  margin-top: 2%;
+  padding: 1% 0;
 }
 
 .extra {
   display: flex;
   align-items: center;
   border-radius: 6px;
-  margin-bottom: 1%;
 }
 
 .item-btn {
   display: flex;
   justify-content: flex-end;
+  margin: 2% 0;
+}
+
+.btn {
+  background-color: #ddd;
+  padding: 1% 3%;
+  border-radius: 4px;
+  border: none;
+}
+.btn:hover {
+  background-color: #fdfafb;
 }
 
 .total {
