--- a/client/src/App.css
+++ b/client/src/App.css
@@ -230,13 +230,15 @@ p {
 }
 
 .btn {
-  background-color: #ddd;
+  background-color: #836e71;
+  color: #fdfafb;
   padding: 1% 3%;
   border-radius: 4px;
   border: none;
 }
 .btn:hover {
   background-color: #fdfafb;
+  color: black;
 }
 
 .total {
