--- a/client/src/App.css
+++ b/client/src/App.css
@@ -154,7 +154,7 @@ h4 {
   font-size: 1.6em;
 }
 
-p {
+p, button {
   font-size: 1.2em;
   line-height: 1.4;
 }
@@ -182,13 +182,30 @@ p {
 }
 
 /* Menu, Cart */
+.cart, .menu-items {
+  margin-bottom: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .item {
   background-color: #cdadb0;
   border-radius: 6px;
+  margin-bottom: 2%;
+  width: 80%;
+}
+
+.item-close {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.item-container {
   display: flex;
   justify-content: center;
-  padding: 2%;
-  margin-bottom: 2%;
+  padding: 0 1% 4%;
+  margin-top: 1%;
 }
 
 .item-img {
@@ -226,19 +243,45 @@ p {
 .item-btn {
   display: flex;
   justify-content: flex-end;
-  margin: 2% 0;
+  padding-top: 8%;
 }
 
-.btn {
+.btn, .btn-2 {
   background-color: #836e71;
   color: #fdfafb;
-  padding: 1% 3%;
+  padding: 2% 6%;
   border-radius: 4px;
   border: none;
 }
 .btn:hover {
   background-color: #fdfafb;
   color: black;
+}
+
+.btn-2 {
+  background-color: rgb(22, 22, 22);
+  color: #66545a;
+  padding: 2% 6%;
+  border-radius: 4px;
+  border: none;
+}
+.btn-2:hover {
+  background-color: #cdadb0;
+}
+
+.toolbar {
+  background-color: #836e71;
+  color: #fdfafb;
+}
+
+.update-btn {
+  display: flex;
+  justify-content: center;
+  margin:0 8%;
+  left: 0;
+  right: 0;
+  bottom: 4%;
+  position: fixed;
 }
 
 .total {
@@ -258,11 +301,18 @@ p {
   .App {
     margin: 4%;
   }
+  h4 {
+    font-size: 1.4em;
+  }
+  p, button {
+    font-size: 1em;
+    line-height: 1.4;
+  }
   .nav {
     margin-bottom: 4%;
   }
-  .img-container {
-    margin-top: 1%;
+  .cart, .menu-items {
+    margin-bottom: 30%;
   }
   .item-img {
     width: 80px;
@@ -270,10 +320,14 @@ p {
     border-radius: 80px;
   }
   .item {
-    margin: 8% 0;
+    margin-bottom: 6%;
+    width: 100%;
+  }
+  .item-container {
+    padding: 0 6% 4%;
   }
   .item-content {
-    padding: 5%;
+    width: 100%;
   }
   .total {
     padding: 6% 5%;
