--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,6 +182,20 @@ p, button {
 }
 
 /* Menu, Cart */
+.seach-container {
+  margin-bottom: 2%;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  border: 2px solid green;
+}
+
+.seach-bar {
+  display: flex;
+  justify-content: flex-start;
+  border: 2px solid blue;
+}
+
 .cart, .menu-items {
   margin-bottom: 15%;
   display: flex;
