--- a/client/src/App.css
+++ b/client/src/App.css
@@ -167,10 +167,16 @@ p, button {
   margin-bottom: 2%;
 }
 
+.nav-left {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   color: black;
   text-decoration: none;
   font-size: 2em;
+  padding-right: 30px;
 }
 .logo:hover {
   color: #cdadb0;
@@ -181,21 +187,16 @@ p, button {
   justify-content: flex-end;
 }
 
+/* Search Bar */
+.search-bar {
+
+}
+
+/* .search-icon {
+
+} */
+
 /* Menu, Cart */
-.seach-container {
-  margin-bottom: 2%;
-  width: 80%;
-  display: flex;
-  align-items: center;
-  border: 2px solid green;
-}
-
-.seach-bar {
-  display: flex;
-  justify-content: flex-start;
-  border: 2px solid blue;
-}
-
 .cart, .menu-items {
   margin-bottom: 15%;
   display: flex;
@@ -223,7 +224,7 @@ p, button {
 }
 
 .item-img {
-  border: 1px solid #ddd;
+  border: 1px solid #fdfafb;
   width: 110px;
   height: 110px;
   border-radius: 100px;
